--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 MONGO URL = 'mongodb+srv://apasichnyk:134415marina@cluster0.xccgwrb.mongodb.net/'
+TEST_SENDGRID_KEY = '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'
